--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,486 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <!--<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">-->
+    <title>Na Mu</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link
+      rel="icon"
+      href="./images/NA MU.png"
+      type="image/x-icon"
+    >
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <body class="page__body">
+    <header class="header">
+      <div class="container">
+        <div class="top-bar">
+          <a href="#menu" class="top-bar__icon-menu"></a>
+          <a href="#" class="top-bar__logo-link">
+            <img
+              src="./images/logo.svg"
+              alt="logo"
+              class="top-bar__logo"
+            >
+          </a>
+        </div>
+      </div>
+      <div class="header__background"></div>
+      <div class="container">
+        <div class="header__content">
+          <h1 class="header__title">
+            Художній музей
+          </h1>
+          <div class="header__tickets">
+            <button class="header__tickets-left">
+              КВИТКИ
+              <div class="hint header__tickets-left--container">
+                <a href="#subscribe" class="hint__text">Замовлення</a>
+                <a href="tel:+380442781357" class="hint__phone">+38(044) 278-13-57</a>
+                <a href="#subscribe" class="hint__mail">info@namu.kiev.ua</a>
+              </div>
+            </button>
+            <button class="header__tickets-right">
+              <a href="#events" class="header__tickets-right--arrow"></a>
+            </button>
+          </div>
+          <a href="#events" class="header__mark">
+            <span class="header__mark--title">
+              Події
+            </span>
+            <div class="header__mark--line"></div>
+          </a>
+        </div>
+      </div>
+    </header>
+
+    <aside class="menu page__menu" id="menu">
+      <div class="container">
+        <div class="menu__content">
+          <article class="menu__left">
+            <div class="menu__top">
+              <a href="#" class="menu__close"></a>
+
+              <div class="menu__nav">
+                <nav class="menu__nav--left">
+                  <p class="menu__nav--item">
+                    <a href="#gallery" class="menu__nav--link">Галерея</a>
+                  </p>
+                  <p class="menu__nav--item">
+                    <a href="#events" class="menu__nav--link">
+                      Виставки та
+                      <br>
+                      події
+                    </a>
+                  </p>
+                </nav>
+
+                <nav class="menu__nav--right">
+                  <p class="menu__nav--item">
+                    <a href="#subscribe" class="menu__nav--link">Про Нас</a>
+                  </p>
+                  <p class="menu__nav--item">
+                    <a href="#contacts" class="menu__nav--link">Контакти</a>
+                  </p>
+                </nav>
+              </div>
+            </div>
+          </article>
+          <div class="menu__line"></div>
+          <article class="menu__schedule">
+            <div class="menu__schedule--time">
+              <p class="menu__schedule--name">
+                Графік роботи:
+              </p>
+              <span class="menu__schedule--time--bold">12:00 — 20:00</span> середа <br>
+              <span class="menu__schedule--time--bold">12:00 — 20:00</span> четвер <br>
+              <span class="menu__schedule--time--bold">12:00 — 20:00</span> п’ятниця <br>
+              <span class="menu__schedule--time--bold">11:00 — 19:00</span> субота <br>
+              <span class="menu__schedule--time--bold">11:00 — 19:00</span> неділя <br>
+            </div>
+            <div class="menu__schedule--info">
+              <span class="menu__schedule--bold">Вихідні:</span>
+              понеділок, вівторок.<br>
+              Каса припиняє роботу за 1 годину до закриття музею.
+            </div>
+          </article>
+        </div>
+      </div>
+    </aside>
+
+    <main class="main">
+      <div class="main__content">
+        <section class="main__announced announced" id="events">
+          <div class="container">
+            <h2 class="announced__title">
+              Актуальні події
+            </h2>
+
+            <div class="announced__events event">
+              <article class="event__gradobank event__author"
+              data-author="С.I. Васильківський «Кримський берег»">
+                <img
+                  src="./images/landscape.svg"
+                  alt="landscape"
+                  class="event__photo"
+                >
+                <div class="event__about">
+                  <div class="event__pre">
+                    <h4 class="event__subtitle">
+                      Виставка
+                    </h4>
+
+                    <p class="event__date">
+                      26.08-29.11.2019
+                    </p>
+                  </div>
+
+                  <div class="event__title-wrap">
+                    <h3 class="event__title">
+                      Йду i повертаюсь
+                    </h3>
+
+                    <div class="event__square"></div>
+                  </div>
+
+                  <p class="event__description">
+                    Національний Художній Музей України презентує унікальну частину
+                    колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                  </p>
+                </div>
+              </article>
+
+              <article class="event__yablonska event__author"
+              data-author="П.І. Холодний «Казка про дівчинку та павлина»">
+                <img
+                  src="./images/girl.svg"
+                  alt="girl"
+                  class="event__photo"
+                >
+                <div class="event__about">
+                  <div class="event__pre">
+                    <h4 class="event__subtitle">
+                      Виставка
+                    </h4>
+
+                    <p class="event__date">
+                      26.08-29.11.2019
+                    </p>
+
+                  </div>
+
+                  <div class="event__title-wrap">
+                    <h3 class="event__title">
+                      I спогади i мрії
+                    </h3>
+
+                    <div class="event__square"></div>
+                  </div>
+
+                  <p class="event__description">
+                    Національний художній музей України до 100 річчя від дня народження
+                    видатної української художниці  Тетяни Яблонської відкриває ретроспективну
+                    ювілейну виставку «І спогади i мрії».
+                  </p>
+                </div>
+              </article>
+            </div>
+          </div>
+          <div class="announced__background"></div>
+          <div class="container">
+            <a href="#subscribe" class="lecture announced__lecture">
+              <div class="lecture__pre">
+                <h4 class="lecture__subtitle">
+                  Лекція
+                </h4>
+
+                <p class="lecture__date">
+                  26/08/2019 - 11:00
+                </p>
+              </div>
+
+              <h3 class="lecture__title">
+                Від класицизму до<br>романтизму
+              </h3>
+            </a>
+          </div>
+
+        </section>
+
+        <section class="main__gallery gallery" id="gallery">
+          <div class="container">
+            <h1 class="gallery__title">
+              Галерея
+            </h1>
+            <div class="wrapper gallery__wrapper">
+              <input
+                type="radio"
+                id="slide1"
+                name="point"
+                class="gallery__radio"
+                checked
+              >
+              <input
+                type="radio"
+                id="slide2"
+                name="point"
+                class="gallery__radio"
+              >
+              <input
+                type="radio"
+                id="slide3"
+                name="point"
+                class="gallery__radio"
+              >
+              <input
+                type="radio"
+                id="slide4"
+                name="point"
+                class="gallery__radio"
+              >
+              <div class="slider gallery__slider">
+                <div class="slides gallery__slides--slide1 slide1">
+                  <img
+                    src="./images/women.svg"
+                    alt="women"
+                  >
+                </div>
+                <div class="slides slide2 gallery__slides--slide2">
+                  <img
+                    src="./images/geese.svg"
+                    alt="geese"
+                  >
+                </div>
+                <div class="slides slide3 gallery__slides--slide3">
+                  <img
+                    src="./images/cart.svg"
+                    alt="cart"
+                  >
+                </div>
+                <div class="slides slide4 gallery__slides--slide4">
+                  <img
+                    src="./images/beach.svg"
+                    alt="beach"
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="controls gallery__controls">
+              <label for="slide1" class="gallery__dott"></label>
+              <label for="slide2" class="gallery__dott"></label>
+              <label for="slide3" class="gallery__dott"></label>
+              <label for="slide4" class="gallery__dott"></label>
+            </div>
+          </div>
+
+          <div class="container">
+            <div class="slide-block">
+              <div class="slide1">
+                <img
+                    src="./images/women-tab.png"
+                    alt="women"
+                  >
+              </div>
+              <div class="slide2">
+                <img
+                    src="./images/geese.svg"
+                    alt="geese"
+                  >
+              </div>
+            </div>
+          </div>
+
+          <div class="container">
+            <div class="gallery__exhibition pictures">
+              <div class="pictures__author gallery__exhibition--picture1"
+              data-author="Ф.Г. Кричевський «Нaречена»"></div>
+              <div class="pictures__author gallery__exhibition--picture2"
+              data-author="П.О. Левченко «Глухомань»"></div>
+              <div class="pictures__author gallery__exhibition--picture3"
+              data-author="К.К. Костанді «Сонячний день»"></div>
+              <div class="pictures__author gallery__exhibition--picture4"
+              data-author="М.П. Глущенко «На морі»"></div>
+            </div>
+          </div>
+        </section>
+
+        <section class="main__subscribe subscribe" id="subscribe">
+          <div class="container">
+            <h2 class="subscribe__title">
+              Підписка
+            </h2>
+            <p class="subscribe__text">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </p>
+
+            <form
+              class="subscribe__form"
+              action="#"
+              onsubmit="this.reset(); return false;"
+            >
+              <label for="email">
+                <input
+                  class="subscribe__form--email"
+                  autocomplete="email"
+                  type="email"
+                  id="email"
+                  placeholder="E-mail"
+                  name="email"
+                  pattern="[a-z0-9._%+\-]+@[a-z0-9.\-]+\.[a-z]{2,}$"
+                  required
+                >
+              </label>
+              <button class="subscribe__form--arrow">
+                <img
+                  src="./images/form-arrow-right.svg"
+                  alt="arrow"
+                  class="subscribe__form--svg"
+                >
+              </button>
+            </form>
+          </div>
+        </section>
+      </div>
+    </main>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__content">
+          <article class="footer__top">
+            <a href="#" class="footer__top--logo-link">
+              <img
+                src="./images/logo-tab.svg"
+                alt="logo"
+                class="footer__top--logo"
+              >
+            </a>
+
+            <div class="footer__network">
+              <a
+                href="https://www.facebook.com/?locale=uk_UA"
+                class="footer__network--link"
+                target="_blank"
+              >
+                <img
+                  src="./images/facebook-logo.png"
+                  alt="facebook"
+                  class="footer__network--image"
+                >
+              </a>
+
+              <a
+                href="https://www.instagram.com/"
+                class="footer__network--link"
+                target="_blank"
+              >
+                <img
+                  src="./images/instagram-logo.png"
+                  alt="instagram"
+                  class="footer__network--image"
+                >
+              </a>
+            </div>
+          </article>
+
+          <article class="footer__schedule">
+            <div class="footer__schedule--text">
+              <p class="footer__schedule--name">
+                Графік роботи:
+              </p>
+              <span class="footer__schedule--text--bold">12:00 — 20:00</span> середа <br>
+              <span class="footer__schedule--text--bold">12:00 — 20:00</span> четвер <br>
+              <span class="footer__schedule--text--bold">12:00 — 20:00</span> п’ятниця <br>
+              <span class="footer__schedule--text--bold">11:00 — 19:00</span> субота <br>
+              <span class="footer__schedule--text--bold">11:00 — 19:00</span> неділя <br>
+            </div>
+            <div class="footer__schedule--info">
+              <span class="footer__schedule--text--bold">Вихідні:</span>
+              понеділок, вівторок.<br>
+              Каса припиняє роботу за 1 годину<br>
+              до закриття музею.
+            </div>
+          </article>
+
+          <article class="footer__contact" id="contacts">
+            <p class="footer__contact--name">
+              Контакти:
+            </p>
+
+            <div class="footer__contact--text">
+              <a
+                href="https://maps.app.goo.gl/PpdX3HaikviWNCzH7"
+                class="footer__contact--text"
+                target="_blank"
+              >
+                вул. М. Грушевського, 6; Київ, 01001
+              </a><br>
+
+              <a
+                href="tel:+380442781357"
+                class="footer__contact--text"
+              >
+                тел. +38 (044) 278-13-57
+              </a><br>
+
+              <a
+                href="tel:+380442787454"
+                class="footer__contact--text"
+              >
+                факс +38 (044) 278-74-54
+              </a><br>
+
+              <a
+                href="mailto:info@namu.kiev.ua"
+                class="footer__contact--text"
+              >
+                e-mail: info@namu.kiev.ua
+              </a>
+            </div>
+          </article>
+
+          <div class="footer__arrow">
+            <a href="#" class="footer__arrow--link">
+              <img
+                src="./images/carbon-arrow-up.svg"
+                alt="arrow"
+                class="footer__arrow--img"
+              >
+            </a>
+          </div>
+          <div class="footer__line"></div>
+          <nav class="footer__nav footer__nav--left">
+            <p class="footer__nav footer__nav--item">
+              <a href="#gallery" class="footer__nav footer__nav--link">Галерея</a>
+            </p>
+
+            <p class="footer__nav footer__nav--item">
+              <a href="#events" class="footer__nav footer__nav--link">Виставки та події</a>
+            </p>
+          </nav>
+          <nav class="footer__nav footer__nav--right">
+            <p class="footer__nav footer__nav--item">
+              <a href="#subscribe" class="footer__nav footer__nav--link">Про Нас</a>
+            </p>
+
+            <p class="footer__nav footer__nav--item">
+              <a href="#contacts" class="footer__nav footer__nav--link">Контакти</a>
+            </p>
+          </nav>
+
+          <p class="footer__design">
+            Designed by Zhyriada Marina
+          </p>
+          <p class="footer__copyright">
+            Copyright © 2019. All Rights Reserved.
+          </p>
+        </div>
+      </div>
+    </footer>
+    <script
+      src="scripts/main.js">
+    </script>
   </body>
 </html>
