--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,421 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
-    <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="icon" href="./images/favicon.svg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;500&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./styles/global.scss">
+    <title>Museum</title>
   </head>
+
   <body>
-    <h1>Hello Mate Academy</h1>
     <script type="text/javascript" src="scripts/main.js"></script>
+<!-- #region header -->
+    <header class="header">
+      <div class="header__background"></div>
+
+
+      <div class="header__wrap">
+        <div class="header__remark"></div>
+
+        <a href="#aside" class="header__open-menu"></a>
+
+        <span class="header__logo">
+          NA<br>
+          MU
+        </span>
+
+        <h1 class="header__title">
+            ХУДОЖНІЙ МУЗЕЙ
+        </h1>
+
+        <a href="#expose" class="header__ticket-wrap">
+            <div class="header__ticket">
+              КВИТКИ
+            </div>
+
+            <div class="header__ticket-button">
+              <div class="header__ticket-button-image"></div>
+            </div>
+        </a>
+      </div>
+    </header>
+<!-- #endregion -->
+<!-- #region asside -->
+    <asside class="aside" id="aside">
+      <div class="aside__wrap">
+        <nav class="asside__nav nav">
+          <a href="#" class="nav__close-icon"></a>
+
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a href="#gallery" class="nav__link">
+                Галерея
+              </a>
+
+              <a href="#expose" class="nav__link">
+                Виставки та події
+              </a>
+            </li>
+
+            <li class="nav__item">
+              <a href="#subscribe" class="nav__link">
+                Про Hac
+              </a>
+
+              <a href="#contacts" class="nav__link">
+                Контакти
+              </a>
+            </li>
+          </ul>
+        </nav>
+
+        <div class="aside__work-schedule work-schedule">
+          <span class="work-schedule__title">
+            Графік роботи
+          </span>
+
+          <div class="work-schedule__wrap">
+            <ul class="work-schedule__list">
+              <li class="work-schedule__item">
+                <span class="work-schedule__time">
+                  12:00 — 20:00
+                </span>
+                <span class="work-schedule__day">
+                  середа
+                </span>
+              </li>
+              <li class="work-schedule__item">
+                <span class="work-schedule__time">
+                  12:00 — 20:00
+                </span>
+                <span class="work-schedule__day">
+                  четвер
+                </span>
+              </li>
+              <li class="work-schedule__item">
+                <span class="work-schedule__time">
+                  12:00 — 20:00
+                </span>
+                <span class="work-schedule__day">
+                  пятниця
+                </span>
+              </li>
+              <li class="work-schedule__item">
+                <span class="work-schedule__time">
+                  11:00 — 19:00
+                </span>
+                <span class="work-schedule__day">
+                  субота
+                </span>
+              </li>
+              <li class="work-schedule__item">
+                <span class="work-schedule__time">
+                  11:00 — 19:00
+                </span>
+                <span class="work-schedule__day">
+                  неділя
+                </span>
+              </li>
+            </ul>
+
+            <p class="work-schedule__add-info">
+              <span class="work-schedule__bold-words">
+                Вихідні:
+              </span>
+              понеділок, вівторок<br>
+              Kaca припиняє роботу за 1 годину до<br>
+              закриття музею<br>
+            </p>
+          </div>
+        </div>
+      </div>
+    </asside>
+<!-- #endregion -->
+<!-- #region overlay -->
+    <div class="overlay"></div>
+<!-- #endregion -->
+<!-- #region main -->
+    <main class="main">
+      <section class="main__actual actual" id="expose">
+        <div class="actual__wrap">
+          <h2 class="actual__title">
+            Актуальні
+            події
+          </h2>
+
+          <div class="actual__blocks">
+            <div class="actual__block block">
+              <div class="block__backg-image block__backg-image--1"></div>
+
+              <div class="block__wrapper">
+                <div class="block__event">
+                  <span class="block__event-name">виставка</span>
+
+                  <span class="block__event-date">26.08-29.11.2019</span>
+                </div>
+
+                <h3 class="block__name">
+                  Йду i повертаюсь
+                </h3>
+
+                <p class="block__description">
+                  Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                </p>
+              </div>
+            </div>
+
+            <div class="actual__block block">
+              <div class="block__backg-image block__backg-image--2"></div>
+
+              <div class="block__wrapper">
+                <div class="block__event">
+                  <span class="block__event-name">виставка</span>
+
+                  <span class="block__event-date">26.08-29.11.2019</span>
+                </div>
+
+                <h3 class="block__name">
+                  I спогади i мрії
+                </h3>
+
+                <p class="block__description">
+                  Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади i мрії».
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="main__lection lection">
+          <div class="lection__backg-image"></div>
+
+          <div class="lection__cardinfo">
+            <div class="lection__event-and-date">
+              <span class="lection__event">ЛЕКЦІЯ</span>
+
+              <span class="lection__date">26/08/2019 - 11:00</span>
+            </div>
+
+            <h3 class="lection__title">
+              Від класицизму до романтизму
+            </h3>
+          </div>
+      </section>
+
+      <section class="main__gallery gallery" id="gallery">
+        <div class="gallery__wrap">
+          <h2 class="gallery__title">
+            Галерея
+          </h2>
+
+          <div class="gallery__slider slider">
+            <div class="slider__wrap">
+              <div class="slider__slides">
+                <input
+                  class="slider__radio slider__radio--1"
+                  type="radio"
+                  name="r"
+                  id="r1"
+                  checked
+                  onclick="changeLabelColor()"
+                >
+                <input
+                  class="slider__radio slider__radio--2"
+                  type="radio"
+                  name="r"
+                  id="r2"
+                  onclick="changeLabelColor()"
+                >
+                <input
+                  class="slider__radio slider__radio--3"
+                  type="radio"
+                  name="r"
+                  id="r3"
+                  onclick="changeLabelColor()"
+                >
+                <input
+                  class="slider__radio slider__radio--4"
+                  type="radio"
+                  name="r"
+                  id="r4"
+                  onclick="changeLabelColor()"
+                >
+
+                <div class="slider__navigation">
+                  <label for="r1" class="slider__bar" id="slider-label"></label>
+                  <label for="r2" class="slider__bar" id="slider-label"></label>
+                  <label for="r3" class="slider__bar" id="slider-label"></label>
+                  <label for="r4" class="slider__bar" id="slider-label"></label>
+                </div>
+
+                <div class="slider__slide slider__slide--1">
+                </div>
+                <div class="slider__slide slider__slide--2">
+                </div>
+                <div class="slider__slide slider__slide--3">
+                </div>
+                <div class="slider__slide slider__slide--4">
+                </div>
+                <div class="slider__slide slider__slide--5">
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </section>
+
+      <section class="main__subscribe subscribe" id="subscribe">
+        <div class="subscribe__wrap">
+          <h2 class="subscribe__title">
+            Підписка
+          </h2>
+
+          <p class="subscribe__info">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </p>
+
+          <form method="get" class="subscribe__mail-form">
+            <input
+              type="email"
+              name="email"
+              class="subscribe__mail"
+              placeholder="E-mail"
+              required
+            >
+
+            <button type="submit" class="subscribe__button">
+            </button>
+          </form>
+        </div>
+      </section>
+    </main>
+<!-- #endregion -->
+<!-- #region footer -->
+    <footer class="footer">
+      <section class="footer__info-block info-block">
+        <div class="info-block__wrap">
+          <div class="info-block__logo-social">
+            <img src="./images/na-mu-logo.png" alt="logo" class="info-block__logo">
+
+            <div class="info-block__socials">
+              <a
+                href="https://www.facebook.com/"
+                class="info-block__social info-block__social--facebook"
+                target="_blank"
+              ></a>
+
+              <a
+                href="https://www.instagram.com/"
+                class="info-block__social info-block__social--instagram"
+                target="_blank"
+              ></a>
+            </div>
+          </div>
+
+          <div class="info-block__main-info">
+            <div class="main-info__schedule-block schedule-block">
+              <h3 class="schedule-block__name">
+                Графік роботи
+              </h3>
+
+              <p class="schedule-block__time">
+                <span class="schedule-block__timestamp">
+                  12:00 — 20:00
+                </span>середа<br>
+                <span class="schedule-block__timestamp">
+                  12:00 — 20:00
+                </span>четвер<br>
+                <span class="schedule-block__timestamp">
+                  12:00 — 20:00
+                </span>п’ятниця<br>
+                <span class="schedule-block__timestamp">
+                  11:00 — 19:00
+                </span>субота<br>
+                <span class="schedule-block__timestamp">
+                  11:00 — 19:00
+                </span>неділя<br>
+              </p>
+              <p class="schedule-block__about-time">
+                Вихідні понеділок, вівторок
+                Kaca припиняє роботу за 1 годину
+                до закриття музею
+              </p>
+            </div>
+
+            <div class="main-info__contact-block contact-block" id="contacts">
+              <h3 class="contact-block__name">
+                Контакти:
+              </h3>
+
+              <p class="contact-block__contacts">
+                <a
+                  class="contact-block__adress"
+                  href="https://www.google.com/maps/place/Mykhaila+Hrushevskoho+St,+6,+Kyiv,+02000/@50.4494397,30.5281844,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce52445a8315:0x5e30ef474eddac89!8m2!3d50.4494397!4d30.5307593!16s%2Fg%2F11l76wtstx?entry=ttu"
+                  target="_blank"
+                >
+                  вул. M. Грушевського, 6; Київ, 01001
+                </a>
+                <a class="contact-block__tel" href="tel:+38 (044) 278-13-57">
+                  тел. +38 (044) 278-13-57
+                </a>
+                <a class="contact-block__fax">
+                  факс +38 (044) 278-74-54
+                </a>
+                <a class="contact-block__email" href="mailto:info@namu.kiev.ua">
+                  e-mail: info@namu.kiev.ua
+                </a>
+              </p>
+            </div>
+          </div>
+
+          <a href="#" class="info-block__circleup"></a>
+
+          <div class="info-block__line"></div>
+        </div>
+      </section>
+
+      <section class="footer__navigation navigation">
+        <div class="navigation__wrap">
+          <ul class="navigation__list">
+            <li class="navigation__item">
+              <a href="#gallery" class="navigation__link">
+                Галерея
+              </a>
+
+              <a href="#expose" class="navigation__link">
+                Виставки та події
+              </a>
+            </li>
+
+            <li class="navigation__item">
+              <a href="#" class="navigation__link">
+                Про Hac
+              </a>
+
+              <a href="#contacts" class="navigation__link">
+                Контакти
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="footer__designed-by designed-by">
+        <div class="designed-by__wrap">
+          <p class="designed-by__author">
+            Designed by Zhyriada Marina
+          </p>
+
+          <p class="designed-by__copyright">
+            Copyright © 2019. All Rights Reserved.
+          </p>
+        </div>
+      </section>
+    </footer>
+<!-- #endregion -->
   </body>
 </html>
